; ModuleID = '/home/carl/AnghaBench/netdata/libnetdata/eval/extr_eval.c_eval_plus.c'
source_filename = "/home/carl/AnghaBench/netdata/libnetdata/eval/extr_eval.c_eval_plus.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32* }

@NAN = common dso_local global i64 0, align 8
@INFINITY = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @eval_plus(i32* %0, %struct.TYPE_3__* %1, i32* %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.TYPE_3__*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  store i32* %0, i32** %5, align 8
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** %6, align 8
  store i32* %2, i32** %7, align 8
  %10 = load i32*, i32** %5, align 8
  %11 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i32 0, i32 0
  %13 = load i32*, i32** %12, align 8
  %14 = getelementptr inbounds i32, i32* %13, i64 0
  %15 = load i32*, i32** %7, align 8
  %16 = call i64 @eval_value(i32* %10, i32* %14, i32* %15)
  store i64 %16, i64* %8, align 8
  %17 = load i32*, i32** %5, align 8
  %18 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i32 0, i32 0
  %20 = load i32*, i32** %19, align 8
  %21 = getelementptr inbounds i32, i32* %20, i64 1
  %22 = load i32*, i32** %7, align 8
  %23 = call i64 @eval_value(i32* %17, i32* %21, i32* %22)
  store i64 %23, i64* %9, align 8
  %24 = load i64, i64* %8, align 8
  %25 = call i64 @isnan(i64 %24)
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %31, label %27

27:                                               ; preds = %3
  %28 = load i64, i64* %9, align 8
  %29 = call i64 @isnan(i64 %28)
  %30 = icmp ne i64 %29, 0
  br i1 %30, label %31, label %33

31:                                               ; preds = %27, %3
  %32 = load i64, i64* @NAN, align 8
  store i64 %32, i64* %4, align 8
  br label %47

33:                                               ; preds = %27
  %34 = load i64, i64* %8, align 8
  %35 = call i64 @isinf(i64 %34)
  %36 = icmp ne i64 %35, 0
  br i1 %36, label %41, label %37

37:                                               ; preds = %33
  %38 = load i64, i64* %9, align 8
  %39 = call i64 @isinf(i64 %38)
  %40 = icmp ne i64 %39, 0
  br i1 %40, label %41, label %43

41:                                               ; preds = %37, %33
  %42 = load i64, i64* @INFINITY, align 8
  store i64 %42, i64* %4, align 8
  br label %47

43:                                               ; preds = %37
  %44 = load i64, i64* %8, align 8
  %45 = load i64, i64* %9, align 8
  %46 = add nsw i64 %44, %45
  store i64 %46, i64* %4, align 8
  br label %47

47:                                               ; preds = %43, %41, %31
  %48 = load i64, i64* %4, align 8
  ret i64 %48
}

declare dso_local i64 @eval_value(i32*, i32*, i32*) #1

declare dso_local i64 @isnan(i64) #1

declare dso_local i64 @isinf(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
